--- a/assets/main.css
+++ b/assets/main.css
@@ -16,6 +16,8 @@ html {
     --light-ins-color: #17752d;
     --light-ins-background-color: #e4faea;
     --light-para-color: rgb(10, 73, 136);
+    --light-a-color: rgb(10, 73, 136);
+    --light-a-hover-color: rgb(15, 93, 170);
     --light-mark-color: black;
     --light-mark-background-color: #ffff85;
     --light-blockquote-border-color: #707070;
@@ -107,6 +109,8 @@ html {
         --ins-color: var(--light-ins-color);
         --ins-background-color: var(--light-ins-background-color);
         --para-color: var(--light-para-color);
+        --a-color: var(--light-a-color);
+        --a-hover-color: var(--light-a-hover-color);
         --mark-color: var(--light-mark-color);
         --mark-background-color: var(--light-mark-background-color);
         --blockquote-border-color: var(--light-blockquote-border-color);
@@ -151,6 +155,8 @@ html {
         --ins-color: var(--dark-ins-color);
         --ins-background-color: var(--dark-ins-background-color);
         --para-color: var(--dark-para-color);
+        --a-color: var(--dark-a-color);
+        --a-hover-color: var(--dark-a-hover-color);
         --mark-color: var(--dark-mark-color);
         --mark-background-color: var(--dark-mark-background-color);
         --blockquote-border-color: var(--dark-blockquote-border-color);
@@ -194,6 +200,8 @@ html.light {
     --ins-color: var(--light-ins-color);
     --ins-background-color: var(--light-ins-background-color);
     --para-color: var(--light-para-color);
+    --a-color: var(--light-a-color);
+    --a-hover-color: var(--light-a-hover-color);
     --mark-color: var(--light-mark-color);
     --mark-background-color: var(--light-mark-background-color);
     --blockquote-border-color: var(--light-blockquote-border-color);
@@ -236,6 +244,8 @@ html.dark {
     --ins-color: var(--dark-ins-color);
     --ins-background-color: var(--dark-ins-background-color);
     --para-color: var(--dark-para-color);
+    --a-color: var(--dark-a-color);
+    --a-hover-color: var(--dark-a-hover-color);
     --mark-color: var(--dark-mark-color);
     --mark-background-color: var(--dark-mark-background-color);
     --blockquote-border-color: var(--dark-blockquote-border-color);
@@ -604,6 +614,60 @@ th {
 
 .para::before {
     content: "§";
+}
+
+.toc {
+    --h-indent: 0.75em;
+
+    display: grid;
+    grid-template-columns: min-content auto;
+}
+
+.toc-num {
+    display: inline-block;
+    align-self: end;
+    padding-right: 2em;
+
+    letter-spacing: 0em;
+    font-weight: bold;
+}
+
+.toc h1,
+.toc h2,
+.toc h3,
+.toc h4,
+.toc h5,
+.toc h6 {
+    display: inline-block;
+
+    font-weight: 500;
+    font-size: 12pt;
+
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.toc a,
+.toc-num {
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
+
+.toc a:hover {
+    display: inline-block;
+    width: 100%;
+
+    color: var(--a-hover-color);
+    border-bottom: 1px dashed var(--a-hover-color);
+}
+
+.toc h1,
+.toc h2 {
+    font-weight: bold;
+}
+
+.toc h1:not(.toc a:nth-child(2) h1),
+.toc h2:not(.toc a:nth-child(2) h2) {
+    margin-top: 0.5em;
 }
 
 intro- {
