--- a/assets/main.css
+++ b/assets/main.css
@@ -23,6 +23,9 @@ html {
     --light-blockquote-border-color: #707070;
     --light-blockquote-background-color: #f0f0f0;
     --light-blockquote-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="%23707070"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7.17 17c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94zm10 0c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94z"/></svg>');
+    --light-bug-block-border-color: #9f7b5d;
+    --light-bug-block-background-color: #f0e2d9;
+    --light-bug-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%239f7b5d"><path d="M480-120q-64 0-114.5-33T283-240l-95 54-40-69 103-60q-3-11-5-22.5t-4-22.5H120v-80h122q2-12 4-23.5t5-22.5l-103-60 40-69 94 55q8-14 18.5-27.5T322-612q-2-7-2-14v-14q0-24 7-46t19-41l-66-66 56-57 70 68q17-9 35.5-13.5T480-800q20 0 39 5t36 14l69-69 56 57-66 66q12 19 18.5 41t6.5 46v13.5q0 6.5-2 13.5 11 11 21.5 25t18.5 28l95-54 40 69-104 59q3 11 5.5 22.5T718-440h122v80H718q-2 12-4 23.5t-5 22.5l103 60-40 69-95-55q-32 54-82.5 87T480-120Zm-76-546q17-7 36.5-10.5T480-680q20 0 38.5 3t35.5 10q-8-23-28-38t-46-15q-26 0-47 15.5T404-666Zm76 466q73 0 116.5-61T640-400q0-70-40.5-135T480-600q-78 0-119 64.5T320-400q0 78 43.5 139T480-200Zm-40-80v-240h80v240h-80Z"/></svg>');
     --light-decision-block-border-color: #ab6fa2;
     --light-decision-block-background-color: #f4e6f4;
     --light-decision-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23ab6fa2"><path d="M160-120v-80h480v80H160Zm226-194L160-540l84-86 228 226-86 86Zm254-254L414-796l86-84 226 226-86 86Zm184 408L302-682l56-56 522 522-56 56Z"/></svg>');
@@ -78,6 +81,9 @@ html {
     --dark-blockquote-border-color: #707070;
     --dark-blockquote-background-color: #2c2c2c;
     --dark-blockquote-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="%23707070"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7.17 17c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94zm10 0c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94z"/></svg>');
+    --dark-bug-block-border-color: #ab866f;
+    --dark-bug-block-background-color: #373028;
+    --dark-bug-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23ab866f"><path d="M480-120q-64 0-114.5-33T283-240l-95 54-40-69 103-60q-3-11-5-22.5t-4-22.5H120v-80h122q2-12 4-23.5t5-22.5l-103-60 40-69 94 55q8-14 18.5-27.5T322-612q-2-7-2-14v-14q0-24 7-46t19-41l-66-66 56-57 70 68q17-9 35.5-13.5T480-800q20 0 39 5t36 14l69-69 56 57-66 66q12 19 18.5 41t6.5 46v13.5q0 6.5-2 13.5 11 11 21.5 25t18.5 28l95-54 40 69-104 59q3 11 5.5 22.5T718-440h122v80H718q-2 12-4 23.5t-5 22.5l103 60-40 69-95-55q-32 54-82.5 87T480-120Zm-76-546q17-7 36.5-10.5T480-680q20 0 38.5 3t35.5 10q-8-23-28-38t-46-15q-26 0-47 15.5T404-666Zm76 466q73 0 116.5-61T640-400q0-70-40.5-135T480-600q-78 0-119 64.5T320-400q0 78 43.5 139T480-200Zm-40-80v-240h80v240h-80Z"/></svg>');
     --dark-details-border-color: #707070;
     --dark-details-background-color: #2c2c2c;
     --dark-details-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23707070"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>');
@@ -140,6 +146,9 @@ html {
         --blockquote-border-color: var(--light-blockquote-border-color);
         --blockquote-background-color: var(--light-blockquote-background-color);
         --blockquote-image: var(--light-blockquote-image);
+        --bug-block-border-color: var(--light-bug-block-border-color);
+        --bug-block-background-color: var(--light-bug-block-background-color);
+        --bug-block-image: var(--light-bug-block-image);
         --decision-block-border-color: var(--light-decision-block-border-color);
         --decision-block-background-color: var(--light-decision-block-background-color);
         --decision-block-image: var(--light-decision-block-image);
@@ -198,6 +207,9 @@ html {
         --blockquote-border-color: var(--dark-blockquote-border-color);
         --blockquote-background-color: var(--dark-blockquote-background-color);
         --blockquote-image: var(--dark-blockquote-image);
+        --bug-block-border-color: var(--dark-bug-block-border-color);
+        --bug-block-background-color: var(--dark-bug-block-background-color);
+        --bug-block-image: var(--dark-bug-block-image);
         --decision-block-border-color: var(--dark-decision-block-border-color);
         --decision-block-background-color: var(--dark-decision-block-background-color);
         --decision-block-image: var(--dark-decision-block-image);
@@ -311,6 +323,9 @@ html.dark {
     --blockquote-border-color: var(--dark-blockquote-border-color);
     --blockquote-background-color: var(--dark-blockquote-background-color);
     --blockquote-image: var(--dark-blockquote-image);
+    --bug-block-border-color: var(--dark-bug-block-border-color);
+    --bug-block-background-color: var(--dark-bug-block-background-color);
+    --bug-block-image: var(--dark-bug-block-image);
     --decision-block-border-color: var(--dark-decision-block-border-color);
     --decision-block-background-color: var(--dark-decision-block-background-color);
     --decision-block-image: var(--dark-decision-block-image);
@@ -377,6 +392,7 @@ main {
 
 abstract-block,
 blockquote,
+bug-block,
 code-block,
 decision-block,
 del-block,
@@ -439,6 +455,7 @@ dd {
 
 abstract-block,
 blockquote,
+bug-block,
 del-block,
 details,
 decision-block,
@@ -464,6 +481,7 @@ warning-block {
 
 abstract-block>:first-child,
 blockquote>:first-child,
+bug-block>:first-child,
 del-block>:first-child,
 details>:first-child,
 decision-block>:first-child,
@@ -480,6 +498,7 @@ warning-block>:first-child {
 
 abstract-block>:last-child,
 blockquote>:last-child,
+bug-block>:last-child,
 del-block>:last-child,
 details>:last-child,
 decision-block>:last-child,
@@ -496,6 +515,7 @@ warning-block>:last-child {
 
 abstract-block::before,
 blockquote::before,
+bug-block::before,
 del-block::before,
 details::before,
 decision-block::before,
@@ -873,6 +893,20 @@ blockquote::before {
 blockquote intro-::before {
     content: "Quote:";
     color: var(--blockquote-border-color);
+}
+
+bug-block {
+    background-color: var(--bug-block-background-color);
+    border-left: var(--border-thickness) solid var(--bug-block-border-color);
+}
+
+bug-block::before {
+    background-image: var(--bug-block-image);
+}
+
+bug-block intro-::before {
+    content: "Bug:";
+    color: var(--bug-block-border-color);
 }
 
 del-block {
